--- a/messaging/templates/messaging/login.html
+++ b/messaging/templates/messaging/login.html
@@ -1,15 +1,32 @@
-<!-- login.html -->
-<form method="POST">
-    {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+{% extends 'messaging/base.html' %}
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-
-    <button type="submit">Login</button>
-</form>
-
-{% if error %}
-    <div class="error">{{ error }}</div>
-{% endif %}
+{% block content %}
+<div class="login-container">
+    <h2>Login to Your Account</h2>
+    <form method="post" class="login-form">
+        {% csrf_token %}
+        
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" required placeholder="Enter your username">
+        </div>
+        
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required placeholder="Enter your password">
+        </div>
+        
+        {% if error %}
+            <div class="error-message">
+                <p>{{ error }}</p>
+            </div>
+        {% endif %}
+        
+        <button type="submit" class="login-button">Log In</button>
+    </form>
+    
+    <div class="register-link">
+        Don't have an account? <a href="{% url 'register' %}">Register here</a>
+    </div>
+</div>
+{% endblock %}
